RESOLVED FIXED253340
BifurcatedGraphicsContext fails to apply image masks to the secondary context
https://bugs.webkit.org/show_bug.cgi?id=253340
Summary BifurcatedGraphicsContext fails to apply image masks to the secondary context
Tim Horton
Reported 2023-03-03 13:22:57 PST
BifurcatedGraphicsContext fails to apply image masks to the secondary context
Attachments
Tim Horton
Comment 1 2023-03-03 13:23:01 PST
Tim Horton
Comment 2 2023-03-03 13:26:37 PST
EWS
Comment 3 2023-03-06 11:25:03 PST
Committed 261283@main (91212e766452): <https://commits.webkit.org/261283@main> Reviewed commits have been landed. Closing PR #11024 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.