Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp
@@ -1001,6 +1001,22 @@ void GraphicsContextCG::clipPath(const Path& path, WindRule clipRule)
     }
 }
 
+void GraphicsContextCG::clipToImageBuffer(ImageBuffer& imageBuffer, const FloatRect& destRect)
+{
+    auto nativeImage = imageBuffer.copyNativeImage(DontCopyBackingStore);
+    if (!nativeImage)
+        return;
+
+    // FIXME: This image needs to be grayscale to be used as an alpha mask here.
+    CGContextRef context = platformContext();
+    CGContextTranslateCTM(context, destRect.x(), destRect.maxY());
+    CGContextScaleCTM(context, 1, -1);
+    CGContextClipToRect(context, { { }, destRect.size() });
+    CGContextClipToMask(context, { { }, destRect.size() }, nativeImage->platformImage().get());
+    CGContextScaleCTM(context, 1, -1);
+    CGContextTranslateCTM(context, -destRect.x(), -destRect.maxY());
+}
+
 IntRect GraphicsContextCG::clipBounds() const
 {
     return enclosingIntRect(CGContextGetClipBoundingBox(platformContext()));
