Source/WebCore/platform/graphics/cg/ImageBufferCGBackend.cpp
@@ -62,23 +62,6 @@ unsigned ImageBufferCGBackend::calculateBytesPerRow(const IntSize& backendSize)
     return CheckedUint32(backendSize.width()) * 4;
 }
 
-void ImageBufferCGBackend::clipToMask(GraphicsContext& destContext, const FloatRect& destRect)
-{
-    auto nativeImage = copyNativeImage(DontCopyBackingStore);
-    if (!nativeImage)
-        return;
-    
-    CGContextRef cgContext = destContext.platformContext();
-
-    // FIXME: This image needs to be grayscale to be used as an alpha mask here.
-    CGContextTranslateCTM(cgContext, destRect.x(), destRect.maxY());
-    CGContextScaleCTM(cgContext, 1, -1);
-    CGContextClipToRect(cgContext, { { }, destRect.size() });
-    CGContextClipToMask(cgContext, { { }, destRect.size() }, nativeImage->platformImage().get());
-    CGContextScaleCTM(cgContext, 1, -1);
-    CGContextTranslateCTM(cgContext, -destRect.x(), -destRect.maxY());
-}
-
 std::unique_ptr<ThreadSafeImageBufferFlusher> ImageBufferCGBackend::createFlusher()
 {
     return makeUnique<ThreadSafeImageBufferFlusherCG>(context().platformContext());
